Update report_template.html 10-12

--- a/report_template.html
+++ b/report_template.html
@@ -66,6 +66,47 @@
             color: var(--primary);
             font-size: 1.3rem;
         }
+        .improvement-card {
+            background: var(--card-bg);
+            border-radius: 16px;
+            padding: 1.5rem;
+            margin-top: 1rem;
+            box-shadow: var(--shadow);
+            text-align: center;
+            animation: slideUp 0.5s forwards;
+            margin-bottom: 2rem;
+        }
+
+        .improvement-value {
+            font-size: 2rem;
+            font-weight: 700;
+            margin: 0.5rem 0;
+        }
+
+        .improvement-value.positive {
+            color: var(--success);
+        }
+
+        .improvement-value.negative {
+            color: var(--danger);
+        }
+
+        .improvement-label {
+            font-size: 1.1rem;
+            color: var(--text);
+            opacity: 0.8;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
 
         .section {
             max-width: 1400px;
@@ -241,6 +282,37 @@
                 font-size: 2rem;
             }
         }
+        .energy-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            font-size: 1rem;
+            font-family: Arial, sans-serif;
+        }
+
+        .energy-table th, .energy-table td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+
+        .energy-table th {
+            background-color: #004d40;
+            color: white;
+            font-weight: bold;
+        }
+
+        .energy-table tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        .energy-table tr:hover {
+            background-color: #e0f7fa;
+        }
+
+        .table-wrapper {
+            overflow-x: auto; /* Ensures the table is scrollable on small screens */
+        }
     </style>
 </head>
 <body>
@@ -285,6 +357,14 @@
                 </div>
             </div>
         </div>
+        <div class="improvement-card">
+            <div class="improvement-label">Energy Efficiency Improvement</div>
+            {% set energy_improvement = ((total_before|float - total_after|float) / total_before|float * 100) | round(2) %}
+            <div class="improvement-value {{ 'positive' if energy_improvement > 0 else 'negative' }}">
+                {{ energy_improvement }}%
+                <i class="fas {{ 'fa-arrow-up' if energy_improvement > 0 else 'fa-arrow-down' }}"></i>
+            </div>
+        </div>
 
         <div class="graph-container">
             {{ div_bar_graph_before | safe }}
@@ -295,7 +375,9 @@
 
         <div class="table-wrapper">
             <h3>Most Energy Consumption (Wh)</h3>
-            {{ energy_table_html | safe }}
+            <table class="energy-table">
+                {{ energy_table_html | safe }}
+            </table>
         </div>
     </section>
 
@@ -332,7 +414,23 @@
                 </div>
             </div>
         </div>
-
+        <div class="improvement-card">
+            <div class="improvement-label">Emissions Reduction</div>
+            {% set emissions_improvement = 0 %}
+            {% if total_emissions_before|float > 0 %}
+                {% set emissions_improvement = ((total_emissions_before|float - total_emissions_after|float) / total_emissions_before|float * 100) | round(2) %}
+            {% endif %}
+            <div class="improvement-value {{ 'positive' if emissions_improvement > 0 else 'negative' if emissions_improvement < 0 else 'neutral' }}">
+                {{ emissions_improvement }}%
+                {% if emissions_improvement > 0 %}
+                    <i class="fas fa-arrow-up"></i>
+                {% elif emissions_improvement < 0 %}
+                    <i class="fas fa-arrow-down"></i>
+                {% else %}
+                    <i class="fas fa-minus"></i>
+                {% endif %}
+            </div>
+        </div>
         <div class="graph-container">
             {{ div_bar_graph_before_gco2eq | safe }}
         </div>
@@ -342,7 +440,9 @@
 
         <div class="table-wrapper">
             <h3>Most Emissions (gCO2eq)</h3>
-            {{ emissions_table_html | safe }}
+            <table class="energy-table">
+                {{ emissions_table_html | safe }}
+            </table>
         </div>
     </section>
 
