--- a/last_run_report_template.html
+++ b/last_run_report_template.html
@@ -240,6 +240,78 @@
                 font-size: 2rem;
             }
         }
+        .improvement-card {
+            background: var(--card-bg);
+            border-radius: 16px;
+            padding: 1.5rem;
+            margin-top: 1rem;
+            box-shadow: var(--shadow);
+            text-align: center;
+            animation: slideUp 0.5s forwards;
+            margin-bottom: 2rem;
+        }
+
+        .improvement-value {
+            font-size: 2rem;
+            font-weight: 700;
+            margin: 0.5rem 0;
+        }
+
+        .improvement-value.positive {
+            color: var(--success);
+        }
+
+        .improvement-value.negative {
+            color: var(--danger);
+        }
+
+        .improvement-label {
+            font-size: 1.1rem;
+            color: var(--text);
+            opacity: 0.8;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        .energy-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            font-size: 1rem;
+            font-family: Arial, sans-serif;
+        }
+
+        .energy-table th, .energy-table td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+
+        .energy-table th {
+            background-color: #004d40;
+            color: white;
+            font-weight: bold;
+        }
+
+        .energy-table tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        .energy-table tr:hover {
+            background-color: #e0f7fa;
+        }
+
+        .table-wrapper {
+            overflow-x: auto; /* Ensures the table is scrollable on small screens */
+        }
     </style>
 </head>
 <body>
@@ -285,6 +357,24 @@
             </div>
         </div>
 
+        <div class="improvement-card">
+            <div class="improvement-label">Energy Efficiency Improvement</div>
+            {% set energy_improvement = 0 %}
+            {% if latest_total_before|float > 0 %}
+                {% set energy_improvement = ((latest_total_before|float - latest_total_after|float) / latest_total_before|float * 100) | round(2) %}
+            {% endif %}
+            <div class="improvement-value {{ 'positive' if energy_improvement > 0 else 'negative' if energy_improvement < 0 else 'neutral' }}">
+                {{ energy_improvement }}%
+                {% if energy_improvement > 0 %}
+                    <i class="fas fa-arrow-up"></i>
+                {% elif energy_improvement < 0 %}
+                    <i class="fas fa-arrow-down"></i>
+                {% else %}
+                    <i class="fas fa-minus"></i>
+                {% endif %}
+            </div>
+        </div>
+
         <div class="graph-container">
             {{ latest_div_bar_graph_before | safe }}
         </div>
@@ -294,7 +384,9 @@
 
         <div class="table-wrapper">
             <h3>Most Energy Consumption (Wh)</h3>
-            {{ latest_energy_table_html | safe }}
+            <table class="energy-table">
+                {{ latest_energy_table_html | safe }}
+            </table>
         </div>
     </section>
     
@@ -331,6 +423,23 @@
                 </div>
             </div>
         </div>
+        <div class="improvement-card">
+            <div class="improvement-label">Emissions Reduction</div>
+            {% set emissions_improvement = 0 %}
+            {% if latest_total_emissions_before|float > 0 %}
+                {% set emissions_improvement = ((latest_total_emissions_before|float - latest_total_emissions_after|float) / latest_total_emissions_before|float * 100) | round(2) %}
+            {% endif %}
+            <div class="improvement-value {{ 'positive' if emissions_improvement > 0 else 'negative' if emissions_improvement < 0 else 'neutral' }}">
+                {{ emissions_improvement }}%
+                {% if emissions_improvement > 0 %}
+                    <i class="fas fa-arrow-up"></i>
+                {% elif emissions_improvement < 0 %}
+                    <i class="fas fa-arrow-down"></i>
+                {% else %}
+                    <i class="fas fa-minus"></i>
+                {% endif %}
+            </div>
+        </div>
 
         <div class="graph-container">
             {{ latest_div_bar_graph_before_gco2eq | safe }}
@@ -338,10 +447,11 @@
         <div class="graph-container">
             {{ latest_div_bar_graph_after_gco2eq | safe }}
         </div>
-
         <div class="table-wrapper">
             <h3>Most Emissions (gCO2eq)</h3>
-            {{ latest_emissions_table_html | safe }}
+            <table class="energy-table">
+                {{ latest_emissions_table_html | safe }}
+            </table>
         </div>
     </section>
     
