--- a/report_template.html
+++ b/report_template.html
@@ -282,130 +282,39 @@
                 font-size: 2rem;
             }
         }
-        .tables-container {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: nowrap; /* Prevents wrapping to next line */
-            gap: 2rem;
-            margin-top: 2rem;
-        }
-        .table-box {
-            background: var(--card-bg);
-            border-radius: 16px;
-            padding: 1.5rem;
-            box-shadow: var(--shadow);
-            transition: var(--transition);
-            opacity: 0;
-            transform: translateY(20px);
-            overflow: auto; /* Adds scroll if content overflows vertically */
+        .table-wrapper {
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
 
-        .table-box.show {
-            opacity: 1;
-            transform: translateY(0);
-            transition: opacity 0.5s ease, transform 0.5s ease;
+        .table-container {
+            overflow-x: auto;
         }
 
-        .table-box h2 {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            font-size: 1.2rem;
-            margin-bottom: 1.5rem;
-            padding-bottom: 1rem;
-            border-bottom: 2px solid #e9ecef;
-        }
-
-        .table-box h2 i {
-            color: var(--primary);
-        }
-
-        table {
+        .energy-table {
             width: 100%;
             border-collapse: collapse;
-            table-layout: fixed;
+            font-family: Arial, sans-serif;
+            font-size: 14px;
         }
 
-        table th {
-            background: rgba(46, 204, 113, 0.1);
-            color: var(--text);
-            font-weight: 600;
+        .energy-table th,
+        .energy-table td {
+            padding: 12px 16px;
             text-align: left;
-            padding: 1rem;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 100%;
+            border-bottom: 1px solid #e0e0e0;
         }
 
-        table td {
-            padding: 1rem;
-            border-bottom: 1px solid rgba(0,0,0,0.05);
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 100%;
+        .energy-table th {
+            background-color: #f2f2f2;
+            font-weight: bold;
         }
 
-        table tr:last-child td {
-            border-bottom: none;
+        .energy-table tr:hover {
+            background-color: #f5f5f5;
         }
-
-        table tbody tr {
-            transition: var(--transition);
-        }
-
-        table tbody tr:hover {
-            background: rgba(46, 204, 113, 0.05);
-        }
-        @keyframes slideDown {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeIn {
-            to {
-                opacity: 1;
-            }
-        }
-
-        /* Responsive table for smaller screens */
-        @media (max-width: 768px) {
-            .tables-container {
-                overflow-x: auto;
-            }
-            
-            table {
-                min-width: 600px; /* Adjust based on your content */
-            }
-        }
-
-        @media (max-width: 768px) {
-            .content {
-                padding: 0 1rem;
-            }
-
-            .header h1 {
-                font-size: 2rem;
-            }
-
-            .table-box {
-                padding: 1rem;
-            }
-
-            table {
-                display: block;
-                overflow-x: auto;
-                -webkit-overflow-scrolling: touch;
-            }
-        }   
-
     </style>
 </head>
 <body>
@@ -466,10 +375,10 @@
             {{ div_bar_graph_after | safe }}
         </div>
 
-        <div class="tables-container">
+        <div class="table-wrapper">
             <h3>Most Energy Consumption (Wh)</h3>
-            <div class="table-box">
-                <table>
+            <div class="table-container">
+                <table class="energy-table">
                     <thead>
                         <tr>
                             <th>File Name</th>
