--- a/report_template.html
+++ b/report_template.html
@@ -308,6 +308,16 @@
         tr:hover {
             background-color: #f5f5f5;
         }
+        .chart-wrapper {
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+        .chart-container {
+            display: flex;
+            justify-content: center;
+        }
     </style>
 </head>
 <body>
@@ -438,6 +448,15 @@
             <table class="energy-table">
                 {{ emissions_table_html | safe }}
             </table>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="chart-wrapper">
+            <h3>Server Emissions and Energy Consumption</h3>
+            <div class="chart-container">
+                {{ div_line_chart | safe }}
+            </div>
         </div>
     </section>
 
