--- a/report_template.html
+++ b/report_template.html
@@ -309,15 +309,26 @@
             background-color: #f5f5f5;
         }
         .chart-wrapper {
-            background-color: #f9f9f9;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+            background: var(--card-bg);
+            border-radius: 1rem;
+            padding: 1.5rem;
+            box-shadow: var(--shadow);
+            margin-bottom: 2rem;
+            animation: slideUp 0.5s ease-out;
         }
-        
-        .chart-container {
+        .chart-wrapper h3 {
+            color: var(--text);
+            margin-bottom: 1.5rem;
+            font-size: 1.25rem;
             display: flex;
-            justify-content: center;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .chart-container {
+            width: 100%;
+            height: 400px;
+            position: relative;
         }
     </style>
 </head>
@@ -452,9 +463,10 @@
         </div>
     </section>
 
+    <!-- Server Analysis Section -->
     <section class="section">
         <div class="chart-wrapper">
-            <h3>Server Emissions and Energy Consumption</h3>
+            <h3><i class="fas fa-server"></i> Server Emissions and Energy Consumption</h3>
             <div class="chart-container">
                 {{ div_line_chart | safe }}
             </div>
